...
                        <connections>
                            <outlet property="delegate" destination="-2" id="jEo-l5-Wf8"/>
                        </connections>
                    </textField>
                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wsc-TW-Y4J">
                        <rect key="frame" x="204" y="13" width="89" height="32"/>
                        <buttonCell key="cell" type="push" title="Rename" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="QxJ-ww-lYk">
                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                            <font key="font" metaFont="system"/>
                            <string key="keyEquivalent" base64-UTF8="YES">
DQ
</string>
                        </buttonCell>
...
                            <font key="font" metaFont="system"/>
                            <string key="keyEquivalent" base64-UTF8="YES">
Gw
</string>
                        </buttonCell>
                        <connections>
                            <action selector="cancel:" target="-2" id="3cc-1Q-cl7"/>
                        </connections>
                    </button>
                </subviews>
                <constraints>
                    <constraint firstAttribute="bottom" secondItem="wsc-TW-Y4J" secondAttribute="bottom" constant="20" symbolic="YES" id="Dn8-Dx-Wft"/>
                    <constraint firstItem="B5w-b4-rvr" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="20" symbolic="YES" id="HcV-vO-kJH"/>
...
